--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,31 @@
   </head>
 
   <body>
+    <nav class = "navbar navbar-default">
+      <div class="container">
+       
+          <%= link_to "PinBoard",root_path, :class=> "navbar-brand" %>
+        
+        <% if user_signed_in?%>
+          <ul class ="nav navbar-nav navbar-right">
+            <li><%= link_to "New Pin", new_pin_path%></li>
+            <li><%= link_to "Account",  edit_user_registration_path%></li>
+            <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+          </ul>
+        <% else %>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "Sign Up",  new_user_registration_path%></li>
+          <li><%= link_to "Sign In",  new_user_session_path%></li>
+           
+        </ul>
+        <%end%>
+      </div> 
+  </nav>
+  <div class="container">
   	<% flash.each do |name,msg|%>
   	  <%= content_tag(:div,msg,class:"alert alert-info")%>
   	<% end %>
-  	
     <%= yield %>
+  </div>
   </body>
 </html>
