--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -1,6 +1,6 @@
 <%=form_for @pin do |f| %>
 	<% if @pin.errors.any?%>
-		<h2><%= pluralize(@pin.errors.count,"error")%>prevented this from saving</h2>
+		<h2><%= pluralize(@pin.errors.count,"error")%> prevented this from saving</h2>
 		<ul>
 			<% @pin.errors.full_messages.each do |msg|%>
 				<li><%= msg %></li>
@@ -8,17 +8,17 @@
 		</ul>
 	<%end%>
 
-	<p class = "form-control">
+	
 		<%=f.label :title%><br>
-		<%=f.text_field :title%><br>
-	</p>
-	<p class="form-control">
-		<%=f.label :description%><br>
-		<%=f.text_area :description%><br>
-	</p>
+		<%=f.text_field :title, :class=> "form-control"%><br>
+	
 
-	<p class = "btn btn-primary">
-		<%= f.submit %>
-	</p>
+		<%=f.label :description%><br>
+		<%=f.text_area :description,:class=> "form-control"%><br>
+	
+
+	
+		<%= f.submit 'submit',:class=>"btn btn-primary"%>
+	
 
 <%end%>
