--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,6 +1,5 @@
 <h1>PIN INTREST</h1>
-<%=link_to "New Pin", new_pin_path %>
-<%@pins.each do |pin|%>
-	<p><%= link_to pin.title, pin%></p>
 
+<%@pins.each do |pin|%>
+	<h2><%= link_to pin.title, pin%></h2>
 <% end %>
