--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -7,11 +7,15 @@
 			<%end%>
 		</ul>
 	<%end%>
+	<div class="form-group">
+		<%=f.label :image%><br>
+		<%=f.file_field :image%><br>
+		</div>
 
-	
+		<div class="form-group">
 		<%=f.label :title%><br>
 		<%=f.text_field :title, :class=> "form-control"%><br>
-	
+		</div>
 
 		<%=f.label :description%><br>
 		<%=f.text_area :description,:class=> "form-control"%><br>
