--- a/app/views/pins/edit.html.erb
+++ b/app/views/pins/edit.html.erb
@@ -1,5 +1,6 @@
 <div class="col-md-6 col-md-offset-3">
 <h1>EDIT PIN</h1>
+<%= image_tag @pin.image.url(:medium) %>
 <%= render 'form' %>
 
 <%= link_to "Cancel",@pin %>
