--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,6 +1,10 @@
-
-
-<%@pins.each do |pin|%>
-	<%= link_to (image_tag pin.image.url(:medium)), pin %>
-	<h2><%= link_to pin.title, pin%></h2>
-<% end %>
+<div id="pins" class="transitions-enabled">
+	<%@pins.each do |pin|%>
+		<div class="box panel panel-default">
+		<%= link_to (image_tag pin.image.url(:medium)), pin %>
+		</div>
+		<div class="panel-body">
+			<h2><%= link_to pin.title, pin%></h2>
+		</div>
+	<% end %>
+</div>
