styled in show page, a bit in index page

--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,9 +1,27 @@
-<%= image_tag @pin.image.url(:medium) %>
-
-<h1><%=@pin.title %></h1>
-<p><%= @pin.description %></p>
-<p>submitted by</p>
-<p><%= @pin.user.email %></p>
-<%= link_to "Back",root_path %>
-<%= link_to "Edit",edit_pin_path %>
-<%= link_to 'Delete',  @pin,  method: :delete, data: { confirm: 'Are you sure?' } %>
+<div id="pin_show" class="row">
+	<div class="col-md-8 col-md-offset-2">
+		<div class="panel panel-default">
+			<div class="panel-heading pin_image">
+				<%= image_tag @pin.image.url %>
+			</div>
+			<div class="panel-body">
+				<h1><%=@pin.title %></h1>
+				<p class="description"><%= @pin.description %></p>
+			
+			<div class="panel-footer">
+				<div class="row">
+					<div class="col-md-6">
+						<p>Submitted by</p>
+						<%= @pin.user.email %>
+					</div>
+					<div class="col-md-6">
+						<div class="btn-group pull-right">
+						<%= link_to "Edit",edit_pin_path ,class: "btn btn-default" %>
+						<%= link_to 'Delete',  @pin,  method: :delete, data: { confirm: 'Are you sure?'},class: "btn btn-default"  %>
+						</div>
+					</div>
+			</div>
+			</div>
+		</div>
+	</div>
+</div>
