--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,9 +1,11 @@
 <div id="pins" class="transitions-enabled">
 	<%@pins.each do |pin|%>
 		<div class="box panel panel-default">
-			<%= link_to (image_tag pin.image.url(:medium)), pin %>
+			<%= link_to (image_tag pin.image.url), pin %>
 			<div class="panel-body">
 				<h2><%= link_to pin.title, pin%></h2>
+				Submitted by
+				<%= pin.user.email %>
 			</div>
 		</div>
 	<% end %>
