--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -7,8 +7,8 @@
 			<div class="panel-body">
 				<h1><%=@pin.title %></h1>
 				<p class="description"><%= @pin.description %></p>
-			
-			<div class="panel-footer">
+		</div>
+		<div class="panel-footer">
 				<div class="row">
 					<div class="col-md-6">
 						<p>Submitted by</p>
@@ -16,17 +16,18 @@
 					</div>
 					<div class="col-md-6">
 						<div class="btn-group pull-right">
-						<%= link_to like_pin_path(@pin), method: :put,class: "btn btn-default" do%>
-						<span class="glyphicon glyphicon-heart">
-							<%= @pin.get_upvotes.size %>
-						</span>
-						<%end%>
-						<%= link_to "Edit",edit_pin_path ,class: "btn btn-default" %>
-						<%= link_to 'Delete',  @pin,  method: :delete, data: { confirm: 'Are you sure?'},class: "btn btn-default"  %>
+							<%= link_to like_pin_path(@pin), method: :put,class: "btn btn-default" do%>
+								<span class="glyphicon glyphicon-heart">
+									<%= @pin.get_upvotes.size %>
+								</span>
+							<%end%>
+							<%if user_signed_in?%>
+								<%= link_to "Edit",edit_pin_path ,class: "btn btn-default" %>
+								<%= link_to 'Delete',  @pin,  method: :delete, data: { confirm: 'Are you sure?'},class: "btn btn-default"  %>
+							<% end %>
 						</div>
 					</div>
+				</div>
 			</div>
-			</div>
-		</div>
 	</div>
 </div>
